# BazaarYar

./: .dockerignore  .env.prod.sample  .env.sample  .gitignore  AGENTS.md  LICENSE  Makefile  README.md
server/: .gitignore  SHIM_INVENTORY.md  __init__.py  main.py  pyproject.toml
server/agents/: __init__.py  api.py  attachments.py  event_bus.py  gemini_agent.py  models.py  openai_agent.py  openailike_agent.py  python_sandbox_tool.py  runtime.py  sandbox_executor.py  sandbox_schema.py  streaming_schema.py  table_tools.py
server/api/: common.py  router.py
server/core/: config.py
server/db/: __init__.py  alembic.ini  models.py  session.py  utils.py
server/domain/: chat_store.py
server/features/: __init__.py
server/storage/: test.txt  test2.txt
server/tests/: test_agent_api.py  test_agent_formatters.py  test_agent_observability.py  test_agent_report_tools.py  test_agent_system_prompt.py  test_chat_sanitize.py  test_chat_store.py  test_main.py  test_models_payload_sanitizer.py  test_prompts_api.py  test_prompts_repo.py  test_prompts_service.py  test_python_sandbox_tool.py  test_reports_api.py  test_reports_repo.py  test_reports_service.py  test_sandbox_dataframe_bootstrap.py  test_sandbox_executor.py  test_sandbox_filename_utils.py  test_sandbox_runner.py  test_sandbox_session_executor.py  test_sandbox_workspace_paths.py  test_settings_company_api.py  test_settings_model_api.py  test_settings_service.py  test_settings_tools_api.py  test_tables_api.py  test_tables_importers.py  test_tables_schema.py  test_tables_service_import.py  test_text_sanitize.py
(+276 files in other folders)
